// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ThemeProvider /> > should match the dark theme 1`] = `
{
  "attention": "#FDB813",
  "beta": {
    "alias": {
      "borderRadius": {
        "circle": 9999,
        "large": 36,
        "medium": 8,
        "small": 4,
      },
      "color": {
        "background": {
          "disabled": "#c6c6c6ff",
          "error": "#f2c9c6ff",
          "hover": "#e1f4feff",
          "info": "#cbebfaff",
          "inverted": "#0098e2ff",
          "invertedHover": "#0085c6ff",
          "invertedSelected": "#0098e2ff",
          "primary": "#ffffffff",
          "secondary": "#f9f9f9ff",
          "secondaryHover": "#e1f4feff",
          "secondarySelected": "#0098e2ff",
          "selected": "#cbebfaff",
          "success": "#e8f3edff",
          "warning": "#f4ead2ff",
        },
        "border": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "focus": "#e1f4feff",
          "info": "#015e8dff",
          "primary": "#0098e2ff",
          "secondary": "#dbdbdbff",
          "secondaryHover": "#0085c6ff",
          "secondarySelected": "#00679bff",
          "selectedHover": "#0085c6ff",
          "success": "#358600ff",
          "warning": "#c0570dff",
        },
        "element": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "info": "#015e8dff",
          "inverted": "#ffffffff",
          "primary": "#191919ff",
          "secondary": "#0098e2ff",
          "secondaryHover": "#0085c6ff",
          "secondarySelected": "#00679bff",
          "success": "#358600ff",
          "warning": "#c0570dff",
        },
        "scrim": {
          "heavy": "#ffffffff",
          "light100": "#ffffffff",
          "light30": "#ffffffff",
          "light60": "#ffffffff",
        },
        "text": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "inverted": "#ffffffff",
          "primary": "#191919ff",
          "secondary": "#565656ff",
          "tertiary": "#909090ff",
        },
      },
    },
    "primitive": {
      "borderRadius": {
        "_0": 0,
        "_1600": 16,
        "_200": 2,
        "_3600": 36,
        "_400": 4,
        "_4800": 48,
        "_600": 6,
        "_800": 8,
        "circle": 9999,
      },
      "color": {
        "blue100": "#cbebfaff",
        "blue200": "#91d9fdff",
        "blue300": "#4dc0f5ff",
        "blue400": "#26b2f4ff",
        "blue50": "#e1f4feff",
        "blue500": "#0098e2ff",
        "blue600": "#0085c6ff",
        "blue700": "#0173baff",
        "blue800": "#00679bff",
        "blue900": "#015e8dff",
        "blueA100": "#b4cbdfff",
        "blueA200": "#0076a7ff",
        "blueA300": "#004d7aff",
        "blueA400": "#003854ff",
        "gray10": "#f9f9f9ff",
        "gray100": "#7b7b7bff",
        "gray15": "#eaeaeaff",
        "gray20": "#dbdbdbff",
        "gray200": "#565656ff",
        "gray30": "#c6c6c6ff",
        "gray300": "#3f3f3fff",
        "gray40": "#a9a9a9ff",
        "gray400": "#363636ff",
        "gray50": "#909090ff",
        "gray500": "#2d2d2dff",
        "gray600": "#272727ff",
        "gray700": "#1e1e1eff",
        "gray800": "#191919ff",
        "gray900": "#101010ff",
        "grayBlack": "#000000ff",
        "grayWhite": "#ffffffff",
        "green100": "#e8f3edff",
        "green200": "#d9f1cbff",
        "green300": "#c2e6aaff",
        "green400": "#a7d987ff",
        "green50": "#f0f7f3ff",
        "green500": "#8dce61ff",
        "green600": "#79c542ff",
        "green700": "#63bc1fff",
        "green800": "#52ab15ff",
        "green900": "#358600ff",
        "greenA100": "#2c8500ff",
        "greenA200": "#006300ff",
        "greenA300": "#409f68ff",
        "greenA400": "#007239ff",
        "greenA500": "#004d32ff",
        "navy100": "#ced4d9ff",
        "navy200": "#a5b3beff",
        "navy300": "#8d9ba8ff",
        "navy400": "#698093ff",
        "navy50": "#ecedf0ff",
        "navy500": "#5e7284ff",
        "navy600": "#516373ff",
        "navy700": "#485865ff",
        "navy800": "#3c4a55ff",
        "navy900": "#333e48ff",
        "navyA100": "#242c33ff",
        "navyA200": "#1d2228ff",
        "pink100": "#f6bedaff",
        "pink200": "#f295c2ff",
        "pink300": "#f06aa8ff",
        "pink400": "#ee4a94ff",
        "pink50": "#fbe5f0ff",
        "pink500": "#ee2c7fff",
        "pink600": "#dc2a79ff",
        "pink700": "#c52873ff",
        "pink800": "#af256dff",
        "pink900": "#882062ff",
        "purple100": "#eee9faff",
        "purple200": "#d3c9f2ff",
        "purple300": "#b6a6eaff",
        "purple400": "#9781e2ff",
        "purple50": "#f2f0fbff",
        "purple500": "#7f65dbff",
        "purple600": "#674bd2ff",
        "purple700": "#5c45ccff",
        "purple800": "#4d3dc2ff",
        "purple900": "#3f37baff",
        "purpleA100": "#262cabff",
        "red100": "#f2c9c6ff",
        "red200": "#f3a6a2ff",
        "red300": "#f98480ff",
        "red400": "#fb6265ff",
        "red50": "#fbe4e3ff",
        "red500": "#ff424fff",
        "red600": "#f33c49ff",
        "red700": "#e63745ff",
        "red800": "#e02f3eff",
        "red900": "#be2434ff",
        "redA100": "#cc1414ff",
        "redA200": "#8f0000ff",
        "redA300": "#650000ff",
        "teal100": "#b0e0d7ff",
        "teal200": "#7bccbeff",
        "teal300": "#43b7a4ff",
        "teal400": "#03a792ff",
        "teal50": "#dff2f0ff",
        "teal500": "#00977fff",
        "teal600": "#008a72ff",
        "teal700": "#007a63ff",
        "teal800": "#006a54ff",
        "teal900": "#004e39ff",
        "yellow100": "#f4ead2ff",
        "yellow200": "#efd79fff",
        "yellow300": "#ebc36bff",
        "yellow400": "#eab448ff",
        "yellow50": "#f9f2e3ff",
        "yellow500": "#eba832ff",
        "yellow600": "#e79d2dff",
        "yellow700": "#e28f29ff",
        "yellow800": "#dc8024ff",
        "yellow900": "#c0570dff",
      },
      "duration": {
        "duration0": "0",
        "duration100": "100",
        "duration1000": "1000",
        "duration1600": "1600",
        "duration200": "200",
        "duration2000": "2000",
        "duration300": "300",
        "duration3000": "3000",
        "duration400": "400",
        "duration4000": "4000",
        "duration500": "500",
        "duration5000": "5000",
        "duration600": "600",
        "duration6000": "6000",
        "duration800": "800",
      },
      "size": {
        "_0": 0,
        "_100": 4,
        "_1000": 40,
        "_1100": 44,
        "_1200": 48,
        "_150": 6,
        "_1500": 60,
        "_1600": 64,
        "_1800": 72,
        "_200": 8,
        "_2000": 80,
        "_2400": 96,
        "_25": 1,
        "_250": 10,
        "_300": 12,
        "_3000": 120,
        "_350": 14,
        "_3600": 144,
        "_400": 16,
        "_450": 18,
        "_50": 2,
        "_500": 20,
        "_550": 22,
        "_600": 24,
        "_700": 28,
        "_7000": 280,
        "_800": 32,
        "_900": 36,
        "size7500": 300,
      },
      "transition": {
        "easing": {
          "bounce": "cubic-bezier(0.175, 0.885, 0.32, 1.275)",
          "entranceExpressive": "cubic-bezier(0, 0, 0.3, 1)",
          "entranceProductive": "cubic-bezier(0, 0, 0.38, 0.9)",
          "exitExpressive": "cubic-bezier(0.4, 0.14, 1, 1)",
          "exitProductive": "cubic-bezier(0.2, 0, 1, 0.9)",
          "standardExpressive": "cubic-bezier(0.4, 0.14, 0.3, 1)",
          "standardProductive": "cubic-bezier(0.2, 0, 0.38, 0.9)",
        },
      },
    },
  },
  "breakpoints": {
    "between": [Function],
    "down": [Function],
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "not": [Function],
    "only": [Function],
    "unit": "px",
    "up": [Function],
    "values": {
      "lg": 1200,
      "md": 900,
      "sm": 600,
      "xl": 1536,
      "xs": 0,
    },
  },
  "caution": "#DA291C",
  "colors": {
    "black": "#000000",
    "blue100": "#CBEBFA",
    "blue200": "#91D9FD",
    "blue300": "#0098E2",
    "blue400": "#0085C6",
    "blue500": "#00679B",
    "blue600": "#003854",
    "darkBlue100": "#698093",
    "darkBlue200": "#485865",
    "darkBlue300": "#3C4A55",
    "darkBlue400": "#333E48",
    "darkBlue500": "#242C33",
    "darkBlue600": "#1D2228",
    "darkGrey100": "#EBEBEB",
    "darkGrey200": "#E0E0E0",
    "darkGrey300": "#CCCCCC",
    "green": "#4CA500",
    "grey100": "#F9F9F9",
    "grey200": "#F5F5F5",
    "grey300": "#EBEBEB",
    "grey400": "#CCCCCC",
    "grey500": "#ADADAD",
    "grey600": "#757575",
    "grey700": "#505050",
    "grey800": "#323232",
    "grey900": "#1F1F1F",
    "orange": "#FF891E",
    "pink": "#DC2A79",
    "purple": "#9781E2",
    "red": "#DA291C",
    "teal": "#03A792",
    "white": "#ffffff",
    "yellow": "#FDB813",
  },
  "components": {
    "MuiButtonBase": {
      "defaultProps": {
        "disableRipple": true,
        "disableTouchRipple": true,
      },
    },
  },
  "direction": "ltr",
  "fonts": {
    "androidFont": "Roboto",
    "bold": 700,
    "defaultSize": "16px",
    "extraBold": 900,
    "extraLargeTextSize": "1.25rem",
    "extraSmallTextSize": "0.75rem",
    "fontFamily": "Roboto, sans-serif",
    "header1LineHeight": "1.2em",
    "header1Size": "1.875rem",
    "header1Weight": 400,
    "header2LineHeight": "1.2em",
    "header2Size": "1.25rem",
    "header2Weight": 500,
    "header3LineHeight": "1.125em",
    "header3Size": "1rem",
    "header3Weight": 700,
    "iosFont": "San Francisco",
    "largeTextSize": "1.125rem",
    "light": 300,
    "mediumTextSize": "1rem",
    "regular": 400,
    "semibold": 500,
    "smallTextSize": "0.875rem",
  },
  "good": "#4CA500",
  "isLightTheme": false,
  "marketing": "#9781E2",
  "metric": "#FF891E",
  "mixins": {
    "toolbar": {
      "@media (min-width:0px)": {
        "@media (orientation: landscape)": {
          "minHeight": 48,
        },
      },
      "@media (min-width:600px)": {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "palette": {
    "action": {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "#698093",
      "disabledBackground": "#698093",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": {
      "default": "#242C33",
      "paper": "#242C33",
    },
    "common": {
      "black": "#000000",
      "white": "#000000",
    },
    "contrastThreshold": 3,
    "divider": "rgba(255, 255, 255, 0.12)",
    "error": {
      "contrastText": "#ffffff",
      "dark": "#DA291C",
      "light": "#DA291C",
      "main": "#DA291C",
    },
    "getContrastText": [Function],
    "grey": {
      "100": "#EBEBEB",
      "200": "#E0E0E0",
      "300": "#CCCCCC",
      "400": "#698093",
      "50": "#fafafa",
      "500": "#485865",
      "600": "#3C4A55",
      "700": "#333E48",
      "800": "#242C33",
      "900": "#1D2228",
      "A100": "#E0E0E0",
      "A200": "#CCCCCC",
      "A400": "#698093",
      "A700": "#3C4A55",
    },
    "info": {
      "contrastText": "#ffffff",
      "dark": "#0085C6",
      "light": "#91D9FD",
      "main": "#0098E2",
    },
    "mode": "dark",
    "primary": {
      "contrastText": "#ffffff",
      "dark": "#0085C6",
      "light": "#91D9FD",
      "main": "#0098E2",
    },
    "secondary": {
      "contrastText": "#ffffff",
      "dark": "#3C4A55",
      "light": "#698093",
      "main": "#485865",
    },
    "success": {
      "contrastText": "#ffffff",
      "dark": "#4CA500",
      "light": "#4CA500",
      "main": "#4CA500",
    },
    "text": {
      "disabled": "#698093",
      "icon": "rgba(255, 255, 255, 0.5)",
      "primary": "#ffffff",
      "secondary": "#CCCCCC",
    },
    "tonalOffset": 0.2,
    "warning": {
      "contrastText": "#ffffff",
      "dark": "#FF891E",
      "light": "#FF891E",
      "main": "#FF891E",
    },
  },
  "plain": "#CCCCCC",
  "primaryBackground": "#242C33",
  "primaryBorder": "#485865",
  "primaryDisabled": "#485865",
  "primaryFill": "#0098E2",
  "primaryFocus": "#0098E2",
  "primaryHover": "#0085C6",
  "primarySelected": "#00679B",
  "primaryShadow": "rgba(0, 0, 0, 0.14)",
  "secondaryBackground": "#333E48",
  "secondaryDisabled": "#698093",
  "secondaryShadow": "rgba(0, 0, 0, 0.1)",
  "shadows": [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": {
    "borderRadius": 4,
  },
  "spacing": [Function],
  "tertiaryBackground": "#3C4A55",
  "text": {
    "fontFamily": "Roboto, sans-serif",
    "primary": "#ffffff",
    "secondary": "#CCCCCC",
    "tertiary": "#CCCCCC",
  },
  "transitions": {
    "create": [Function],
    "duration": {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": {
    "body1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.7142,
    },
    "body2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "button": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
      "textTransform": "none",
    },
    "caption": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "fontFamily": "Roboto, sans-serif",
    "fontSize": 16,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": "1.2em",
    },
    "h2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1.25rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": "1.2em",
    },
    "h3": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h4": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h5": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h6": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "htmlFontSize": 16,
    "inherit": {
      "fontFamily": "inherit",
      "fontSize": "inherit",
      "fontWeight": "inherit",
      "letterSpacing": "inherit",
      "lineHeight": "inherit",
    },
    "overline": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 2.3,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "subtitle1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "subtitle2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
  },
  "unstable_sx": [Function],
  "unstable_sxConfig": {
    "alignContent": {},
    "alignItems": {},
    "alignSelf": {},
    "backgroundColor": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "bgcolor": {
      "cssProperty": "backgroundColor",
      "themeKey": "palette",
      "transform": [Function],
    },
    "border": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottom": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottomColor": {
      "themeKey": "palette",
    },
    "borderColor": {
      "themeKey": "palette",
    },
    "borderLeft": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderLeftColor": {
      "themeKey": "palette",
    },
    "borderRadius": {
      "style": [Function],
      "themeKey": "shape.borderRadius",
    },
    "borderRight": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderRightColor": {
      "themeKey": "palette",
    },
    "borderTop": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderTopColor": {
      "themeKey": "palette",
    },
    "bottom": {},
    "boxShadow": {
      "themeKey": "shadows",
    },
    "boxSizing": {},
    "color": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "columnGap": {
      "style": [Function],
    },
    "display": {},
    "displayPrint": {
      "cssProperty": false,
      "transform": [Function],
    },
    "flex": {},
    "flexBasis": {},
    "flexDirection": {},
    "flexGrow": {},
    "flexShrink": {},
    "flexWrap": {},
    "fontFamily": {
      "themeKey": "typography",
    },
    "fontSize": {
      "themeKey": "typography",
    },
    "fontStyle": {
      "themeKey": "typography",
    },
    "fontWeight": {
      "themeKey": "typography",
    },
    "gap": {
      "style": [Function],
    },
    "gridArea": {},
    "gridAutoColumns": {},
    "gridAutoFlow": {},
    "gridAutoRows": {},
    "gridColumn": {},
    "gridRow": {},
    "gridTemplateAreas": {},
    "gridTemplateColumns": {},
    "gridTemplateRows": {},
    "height": {
      "transform": [Function],
    },
    "justifyContent": {},
    "justifyItems": {},
    "justifySelf": {},
    "left": {},
    "letterSpacing": {},
    "lineHeight": {},
    "m": {
      "style": [Function],
    },
    "margin": {
      "style": [Function],
    },
    "marginBlock": {
      "style": [Function],
    },
    "marginBlockEnd": {
      "style": [Function],
    },
    "marginBlockStart": {
      "style": [Function],
    },
    "marginBottom": {
      "style": [Function],
    },
    "marginInline": {
      "style": [Function],
    },
    "marginInlineEnd": {
      "style": [Function],
    },
    "marginInlineStart": {
      "style": [Function],
    },
    "marginLeft": {
      "style": [Function],
    },
    "marginRight": {
      "style": [Function],
    },
    "marginTop": {
      "style": [Function],
    },
    "marginX": {
      "style": [Function],
    },
    "marginY": {
      "style": [Function],
    },
    "maxHeight": {
      "transform": [Function],
    },
    "maxWidth": {
      "style": [Function],
    },
    "mb": {
      "style": [Function],
    },
    "minHeight": {
      "transform": [Function],
    },
    "minWidth": {
      "transform": [Function],
    },
    "ml": {
      "style": [Function],
    },
    "mr": {
      "style": [Function],
    },
    "mt": {
      "style": [Function],
    },
    "mx": {
      "style": [Function],
    },
    "my": {
      "style": [Function],
    },
    "order": {},
    "overflow": {},
    "p": {
      "style": [Function],
    },
    "padding": {
      "style": [Function],
    },
    "paddingBlock": {
      "style": [Function],
    },
    "paddingBlockEnd": {
      "style": [Function],
    },
    "paddingBlockStart": {
      "style": [Function],
    },
    "paddingBottom": {
      "style": [Function],
    },
    "paddingInline": {
      "style": [Function],
    },
    "paddingInlineEnd": {
      "style": [Function],
    },
    "paddingInlineStart": {
      "style": [Function],
    },
    "paddingLeft": {
      "style": [Function],
    },
    "paddingRight": {
      "style": [Function],
    },
    "paddingTop": {
      "style": [Function],
    },
    "paddingX": {
      "style": [Function],
    },
    "paddingY": {
      "style": [Function],
    },
    "pb": {
      "style": [Function],
    },
    "pl": {
      "style": [Function],
    },
    "position": {},
    "pr": {
      "style": [Function],
    },
    "pt": {
      "style": [Function],
    },
    "px": {
      "style": [Function],
    },
    "py": {
      "style": [Function],
    },
    "right": {},
    "rowGap": {
      "style": [Function],
    },
    "textAlign": {},
    "textOverflow": {},
    "textTransform": {},
    "top": {},
    "typography": {
      "cssProperty": false,
      "themeKey": "typography",
    },
    "visibility": {},
    "whiteSpace": {},
    "width": {
      "transform": [Function],
    },
    "zIndex": {
      "themeKey": "zIndex",
    },
  },
  "zIndex": {
    "appBar": 1100,
    "drawer": 1200,
    "fab": 1050,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`<ThemeProvider /> > should match the light theme 1`] = `
{
  "attention": "#FDB813",
  "beta": {
    "alias": {
      "borderRadius": {
        "circle": 9999,
        "large": 36,
        "medium": 8,
        "small": 4,
      },
      "color": {
        "background": {
          "disabled": "#c6c6c6ff",
          "error": "#f2c9c6ff",
          "hover": "#e1f4feff",
          "info": "#cbebfaff",
          "inverted": "#0098e2ff",
          "invertedHover": "#0085c6ff",
          "invertedSelected": "#0098e2ff",
          "primary": "#ffffffff",
          "secondary": "#f9f9f9ff",
          "secondaryHover": "#e1f4feff",
          "secondarySelected": "#0098e2ff",
          "selected": "#cbebfaff",
          "success": "#e8f3edff",
          "warning": "#f4ead2ff",
        },
        "border": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "focus": "#e1f4feff",
          "info": "#015e8dff",
          "primary": "#0098e2ff",
          "secondary": "#dbdbdbff",
          "secondaryHover": "#0085c6ff",
          "secondarySelected": "#00679bff",
          "selectedHover": "#0085c6ff",
          "success": "#358600ff",
          "warning": "#c0570dff",
        },
        "element": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "info": "#015e8dff",
          "inverted": "#ffffffff",
          "primary": "#191919ff",
          "secondary": "#0098e2ff",
          "secondaryHover": "#0085c6ff",
          "secondarySelected": "#00679bff",
          "success": "#358600ff",
          "warning": "#c0570dff",
        },
        "scrim": {
          "heavy": "#ffffffff",
          "light100": "#ffffffff",
          "light30": "#ffffffff",
          "light60": "#ffffffff",
        },
        "text": {
          "disabled": "#909090ff",
          "error": "#be2434ff",
          "inverted": "#ffffffff",
          "primary": "#191919ff",
          "secondary": "#565656ff",
          "tertiary": "#909090ff",
        },
      },
    },
    "primitive": {
      "borderRadius": {
        "_0": 0,
        "_1600": 16,
        "_200": 2,
        "_3600": 36,
        "_400": 4,
        "_4800": 48,
        "_600": 6,
        "_800": 8,
        "circle": 9999,
      },
      "color": {
        "blue100": "#cbebfaff",
        "blue200": "#91d9fdff",
        "blue300": "#4dc0f5ff",
        "blue400": "#26b2f4ff",
        "blue50": "#e1f4feff",
        "blue500": "#0098e2ff",
        "blue600": "#0085c6ff",
        "blue700": "#0173baff",
        "blue800": "#00679bff",
        "blue900": "#015e8dff",
        "blueA100": "#b4cbdfff",
        "blueA200": "#0076a7ff",
        "blueA300": "#004d7aff",
        "blueA400": "#003854ff",
        "gray10": "#f9f9f9ff",
        "gray100": "#7b7b7bff",
        "gray15": "#eaeaeaff",
        "gray20": "#dbdbdbff",
        "gray200": "#565656ff",
        "gray30": "#c6c6c6ff",
        "gray300": "#3f3f3fff",
        "gray40": "#a9a9a9ff",
        "gray400": "#363636ff",
        "gray50": "#909090ff",
        "gray500": "#2d2d2dff",
        "gray600": "#272727ff",
        "gray700": "#1e1e1eff",
        "gray800": "#191919ff",
        "gray900": "#101010ff",
        "grayBlack": "#000000ff",
        "grayWhite": "#ffffffff",
        "green100": "#e8f3edff",
        "green200": "#d9f1cbff",
        "green300": "#c2e6aaff",
        "green400": "#a7d987ff",
        "green50": "#f0f7f3ff",
        "green500": "#8dce61ff",
        "green600": "#79c542ff",
        "green700": "#63bc1fff",
        "green800": "#52ab15ff",
        "green900": "#358600ff",
        "greenA100": "#2c8500ff",
        "greenA200": "#006300ff",
        "greenA300": "#409f68ff",
        "greenA400": "#007239ff",
        "greenA500": "#004d32ff",
        "navy100": "#ced4d9ff",
        "navy200": "#a5b3beff",
        "navy300": "#8d9ba8ff",
        "navy400": "#698093ff",
        "navy50": "#ecedf0ff",
        "navy500": "#5e7284ff",
        "navy600": "#516373ff",
        "navy700": "#485865ff",
        "navy800": "#3c4a55ff",
        "navy900": "#333e48ff",
        "navyA100": "#242c33ff",
        "navyA200": "#1d2228ff",
        "pink100": "#f6bedaff",
        "pink200": "#f295c2ff",
        "pink300": "#f06aa8ff",
        "pink400": "#ee4a94ff",
        "pink50": "#fbe5f0ff",
        "pink500": "#ee2c7fff",
        "pink600": "#dc2a79ff",
        "pink700": "#c52873ff",
        "pink800": "#af256dff",
        "pink900": "#882062ff",
        "purple100": "#eee9faff",
        "purple200": "#d3c9f2ff",
        "purple300": "#b6a6eaff",
        "purple400": "#9781e2ff",
        "purple50": "#f2f0fbff",
        "purple500": "#7f65dbff",
        "purple600": "#674bd2ff",
        "purple700": "#5c45ccff",
        "purple800": "#4d3dc2ff",
        "purple900": "#3f37baff",
        "purpleA100": "#262cabff",
        "red100": "#f2c9c6ff",
        "red200": "#f3a6a2ff",
        "red300": "#f98480ff",
        "red400": "#fb6265ff",
        "red50": "#fbe4e3ff",
        "red500": "#ff424fff",
        "red600": "#f33c49ff",
        "red700": "#e63745ff",
        "red800": "#e02f3eff",
        "red900": "#be2434ff",
        "redA100": "#cc1414ff",
        "redA200": "#8f0000ff",
        "redA300": "#650000ff",
        "teal100": "#b0e0d7ff",
        "teal200": "#7bccbeff",
        "teal300": "#43b7a4ff",
        "teal400": "#03a792ff",
        "teal50": "#dff2f0ff",
        "teal500": "#00977fff",
        "teal600": "#008a72ff",
        "teal700": "#007a63ff",
        "teal800": "#006a54ff",
        "teal900": "#004e39ff",
        "yellow100": "#f4ead2ff",
        "yellow200": "#efd79fff",
        "yellow300": "#ebc36bff",
        "yellow400": "#eab448ff",
        "yellow50": "#f9f2e3ff",
        "yellow500": "#eba832ff",
        "yellow600": "#e79d2dff",
        "yellow700": "#e28f29ff",
        "yellow800": "#dc8024ff",
        "yellow900": "#c0570dff",
      },
      "duration": {
        "duration0": "0",
        "duration100": "100",
        "duration1000": "1000",
        "duration1600": "1600",
        "duration200": "200",
        "duration2000": "2000",
        "duration300": "300",
        "duration3000": "3000",
        "duration400": "400",
        "duration4000": "4000",
        "duration500": "500",
        "duration5000": "5000",
        "duration600": "600",
        "duration6000": "6000",
        "duration800": "800",
      },
      "size": {
        "_0": 0,
        "_100": 4,
        "_1000": 40,
        "_1100": 44,
        "_1200": 48,
        "_150": 6,
        "_1500": 60,
        "_1600": 64,
        "_1800": 72,
        "_200": 8,
        "_2000": 80,
        "_2400": 96,
        "_25": 1,
        "_250": 10,
        "_300": 12,
        "_3000": 120,
        "_350": 14,
        "_3600": 144,
        "_400": 16,
        "_450": 18,
        "_50": 2,
        "_500": 20,
        "_550": 22,
        "_600": 24,
        "_700": 28,
        "_7000": 280,
        "_800": 32,
        "_900": 36,
        "size7500": 300,
      },
      "transition": {
        "easing": {
          "bounce": "cubic-bezier(0.175, 0.885, 0.32, 1.275)",
          "entranceExpressive": "cubic-bezier(0, 0, 0.3, 1)",
          "entranceProductive": "cubic-bezier(0, 0, 0.38, 0.9)",
          "exitExpressive": "cubic-bezier(0.4, 0.14, 1, 1)",
          "exitProductive": "cubic-bezier(0.2, 0, 1, 0.9)",
          "standardExpressive": "cubic-bezier(0.4, 0.14, 0.3, 1)",
          "standardProductive": "cubic-bezier(0.2, 0, 0.38, 0.9)",
        },
      },
    },
  },
  "breakpoints": {
    "between": [Function],
    "down": [Function],
    "keys": [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ],
    "not": [Function],
    "only": [Function],
    "unit": "px",
    "up": [Function],
    "values": {
      "lg": 1200,
      "md": 900,
      "sm": 600,
      "xl": 1536,
      "xs": 0,
    },
  },
  "caution": "#DA291C",
  "colors": {
    "black": "#000000",
    "blue100": "#CBEBFA",
    "blue200": "#91D9FD",
    "blue300": "#0098E2",
    "blue400": "#0085C6",
    "blue500": "#00679B",
    "blue600": "#003854",
    "darkBlue100": "#698093",
    "darkBlue200": "#485865",
    "darkBlue300": "#3C4A55",
    "darkBlue400": "#333E48",
    "darkBlue500": "#242C33",
    "darkBlue600": "#1D2228",
    "darkGrey100": "#EBEBEB",
    "darkGrey200": "#E0E0E0",
    "darkGrey300": "#CCCCCC",
    "green": "#4CA500",
    "grey100": "#F9F9F9",
    "grey200": "#F5F5F5",
    "grey300": "#EBEBEB",
    "grey400": "#CCCCCC",
    "grey500": "#ADADAD",
    "grey600": "#757575",
    "grey700": "#505050",
    "grey800": "#323232",
    "grey900": "#1F1F1F",
    "orange": "#FF891E",
    "pink": "#DC2A79",
    "purple": "#9781E2",
    "red": "#DA291C",
    "teal": "#03A792",
    "white": "#ffffff",
    "yellow": "#FDB813",
  },
  "components": {
    "MuiButtonBase": {
      "defaultProps": {
        "disableRipple": true,
        "disableTouchRipple": true,
      },
    },
  },
  "direction": "ltr",
  "fonts": {
    "androidFont": "Roboto",
    "bold": 700,
    "defaultSize": "16px",
    "extraBold": 900,
    "extraLargeTextSize": "1.25rem",
    "extraSmallTextSize": "0.75rem",
    "fontFamily": "Roboto, sans-serif",
    "header1LineHeight": "1.2em",
    "header1Size": "1.875rem",
    "header1Weight": 400,
    "header2LineHeight": "1.2em",
    "header2Size": "1.25rem",
    "header2Weight": 500,
    "header3LineHeight": "1.125em",
    "header3Size": "1rem",
    "header3Weight": 700,
    "iosFont": "San Francisco",
    "largeTextSize": "1.125rem",
    "light": 300,
    "mediumTextSize": "1rem",
    "regular": 400,
    "semibold": 500,
    "smallTextSize": "0.875rem",
  },
  "good": "#4CA500",
  "isLightTheme": true,
  "marketing": "#9781E2",
  "metric": "#FF891E",
  "mixins": {
    "toolbar": {
      "@media (min-width:0px)": {
        "@media (orientation: landscape)": {
          "minHeight": 48,
        },
      },
      "@media (min-width:600px)": {
        "minHeight": 64,
      },
      "minHeight": 56,
    },
  },
  "palette": {
    "action": {
      "activatedOpacity": 0.12,
      "active": "rgba(0, 0, 0, 0.54)",
      "disabled": "#ADADAD",
      "disabledBackground": "#EBEBEB",
      "disabledOpacity": 0.38,
      "focus": "rgba(0, 0, 0, 0.12)",
      "focusOpacity": 0.12,
      "hover": "rgba(0, 0, 0, 0.04)",
      "hoverOpacity": 0.04,
      "selected": "rgba(0, 0, 0, 0.08)",
      "selectedOpacity": 0.08,
    },
    "augmentColor": [Function],
    "background": {
      "default": "#ffffff",
      "paper": "#ffffff",
    },
    "common": {
      "black": "#000000",
      "white": "#ffffff",
    },
    "contrastThreshold": 3,
    "divider": "rgba(0, 0, 0, 0.12)",
    "error": {
      "contrastText": "#ffffff",
      "dark": "#DA291C",
      "light": "#DA291C",
      "main": "#DA291C",
    },
    "getContrastText": [Function],
    "grey": {
      "100": "#F9F9F9",
      "200": "#F5F5F5",
      "300": "#EBEBEB",
      "400": "#CCCCCC",
      "50": "#fafafa",
      "500": "#ADADAD",
      "600": "#757575",
      "700": "#505050",
      "800": "#323232",
      "900": "#1F1F1F",
      "A100": "#F5F5F5",
      "A200": "#EBEBEB",
      "A400": "#CCCCCC",
      "A700": "#757575",
    },
    "info": {
      "contrastText": "#ffffff",
      "dark": "#0085C6",
      "light": "#91D9FD",
      "main": "#0098E2",
    },
    "mode": "light",
    "primary": {
      "contrastText": "#ffffff",
      "dark": "#0085C6",
      "light": "#91D9FD",
      "main": "#0098E2",
    },
    "secondary": {
      "contrastText": "#ffffff",
      "dark": "#757575",
      "light": "#CCCCCC",
      "main": "#ADADAD",
    },
    "success": {
      "contrastText": "#ffffff",
      "dark": "#4CA500",
      "light": "#4CA500",
      "main": "#4CA500",
    },
    "text": {
      "disabled": "#ADADAD",
      "primary": "#323232",
      "secondary": "#CCCCCC",
    },
    "tonalOffset": 0.2,
    "warning": {
      "contrastText": "#ffffff",
      "dark": "#FF891E",
      "light": "#FF891E",
      "main": "#FF891E",
    },
  },
  "plain": "#505050",
  "primaryBackground": "#ffffff",
  "primaryBorder": "#EBEBEB",
  "primaryDisabled": "#EBEBEB",
  "primaryFill": "#0098E2",
  "primaryFocus": "#0098E2",
  "primaryHover": "#0085C6",
  "primarySelected": "#00679B",
  "primaryShadow": "rgba(0, 0, 0, 0.14)",
  "secondaryBackground": "#F5F5F5",
  "secondaryDisabled": "#ADADAD",
  "secondaryShadow": "rgba(0, 0, 0, 0.1)",
  "shadows": [
    "none",
    "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
    "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
    "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
    "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
    "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
    "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
    "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
    "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
    "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
    "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
    "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
    "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
    "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
    "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
    "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
    "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
    "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
    "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
    "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
    "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
    "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
  ],
  "shape": {
    "borderRadius": 4,
  },
  "spacing": [Function],
  "tertiaryBackground": "#EBEBEB",
  "text": {
    "fontFamily": "Roboto, sans-serif",
    "primary": "#323232",
    "secondary": "#CCCCCC",
    "tertiary": "#757575",
  },
  "transitions": {
    "create": [Function],
    "duration": {
      "complex": 375,
      "enteringScreen": 225,
      "leavingScreen": 195,
      "short": 250,
      "shorter": 200,
      "shortest": 150,
      "standard": 300,
    },
    "easing": {
      "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
      "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
      "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
      "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
    },
    "getAutoHeightDuration": [Function],
  },
  "typography": {
    "body1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.7142,
    },
    "body2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "button": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
      "textTransform": "none",
    },
    "caption": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "fontFamily": "Roboto, sans-serif",
    "fontSize": 16,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1.875rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": "1.2em",
    },
    "h2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1.25rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": "1.2em",
    },
    "h3": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h4": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h5": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "h6": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 700,
      "letterSpacing": "normal",
      "lineHeight": "1.125em",
    },
    "htmlFontSize": 16,
    "inherit": {
      "fontFamily": "inherit",
      "fontSize": "inherit",
      "fontWeight": "inherit",
      "letterSpacing": "inherit",
      "lineHeight": "inherit",
    },
    "overline": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.75rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 2.3,
      "textTransform": "uppercase",
    },
    "pxToRem": [Function],
    "subtitle1": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "1rem",
      "fontWeight": 400,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
    "subtitle2": {
      "fontFamily": "Roboto, sans-serif",
      "fontSize": "0.875rem",
      "fontWeight": 500,
      "letterSpacing": "normal",
      "lineHeight": 1.3,
    },
  },
  "unstable_sx": [Function],
  "unstable_sxConfig": {
    "alignContent": {},
    "alignItems": {},
    "alignSelf": {},
    "backgroundColor": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "bgcolor": {
      "cssProperty": "backgroundColor",
      "themeKey": "palette",
      "transform": [Function],
    },
    "border": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottom": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderBottomColor": {
      "themeKey": "palette",
    },
    "borderColor": {
      "themeKey": "palette",
    },
    "borderLeft": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderLeftColor": {
      "themeKey": "palette",
    },
    "borderRadius": {
      "style": [Function],
      "themeKey": "shape.borderRadius",
    },
    "borderRight": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderRightColor": {
      "themeKey": "palette",
    },
    "borderTop": {
      "themeKey": "borders",
      "transform": [Function],
    },
    "borderTopColor": {
      "themeKey": "palette",
    },
    "bottom": {},
    "boxShadow": {
      "themeKey": "shadows",
    },
    "boxSizing": {},
    "color": {
      "themeKey": "palette",
      "transform": [Function],
    },
    "columnGap": {
      "style": [Function],
    },
    "display": {},
    "displayPrint": {
      "cssProperty": false,
      "transform": [Function],
    },
    "flex": {},
    "flexBasis": {},
    "flexDirection": {},
    "flexGrow": {},
    "flexShrink": {},
    "flexWrap": {},
    "fontFamily": {
      "themeKey": "typography",
    },
    "fontSize": {
      "themeKey": "typography",
    },
    "fontStyle": {
      "themeKey": "typography",
    },
    "fontWeight": {
      "themeKey": "typography",
    },
    "gap": {
      "style": [Function],
    },
    "gridArea": {},
    "gridAutoColumns": {},
    "gridAutoFlow": {},
    "gridAutoRows": {},
    "gridColumn": {},
    "gridRow": {},
    "gridTemplateAreas": {},
    "gridTemplateColumns": {},
    "gridTemplateRows": {},
    "height": {
      "transform": [Function],
    },
    "justifyContent": {},
    "justifyItems": {},
    "justifySelf": {},
    "left": {},
    "letterSpacing": {},
    "lineHeight": {},
    "m": {
      "style": [Function],
    },
    "margin": {
      "style": [Function],
    },
    "marginBlock": {
      "style": [Function],
    },
    "marginBlockEnd": {
      "style": [Function],
    },
    "marginBlockStart": {
      "style": [Function],
    },
    "marginBottom": {
      "style": [Function],
    },
    "marginInline": {
      "style": [Function],
    },
    "marginInlineEnd": {
      "style": [Function],
    },
    "marginInlineStart": {
      "style": [Function],
    },
    "marginLeft": {
      "style": [Function],
    },
    "marginRight": {
      "style": [Function],
    },
    "marginTop": {
      "style": [Function],
    },
    "marginX": {
      "style": [Function],
    },
    "marginY": {
      "style": [Function],
    },
    "maxHeight": {
      "transform": [Function],
    },
    "maxWidth": {
      "style": [Function],
    },
    "mb": {
      "style": [Function],
    },
    "minHeight": {
      "transform": [Function],
    },
    "minWidth": {
      "transform": [Function],
    },
    "ml": {
      "style": [Function],
    },
    "mr": {
      "style": [Function],
    },
    "mt": {
      "style": [Function],
    },
    "mx": {
      "style": [Function],
    },
    "my": {
      "style": [Function],
    },
    "order": {},
    "overflow": {},
    "p": {
      "style": [Function],
    },
    "padding": {
      "style": [Function],
    },
    "paddingBlock": {
      "style": [Function],
    },
    "paddingBlockEnd": {
      "style": [Function],
    },
    "paddingBlockStart": {
      "style": [Function],
    },
    "paddingBottom": {
      "style": [Function],
    },
    "paddingInline": {
      "style": [Function],
    },
    "paddingInlineEnd": {
      "style": [Function],
    },
    "paddingInlineStart": {
      "style": [Function],
    },
    "paddingLeft": {
      "style": [Function],
    },
    "paddingRight": {
      "style": [Function],
    },
    "paddingTop": {
      "style": [Function],
    },
    "paddingX": {
      "style": [Function],
    },
    "paddingY": {
      "style": [Function],
    },
    "pb": {
      "style": [Function],
    },
    "pl": {
      "style": [Function],
    },
    "position": {},
    "pr": {
      "style": [Function],
    },
    "pt": {
      "style": [Function],
    },
    "px": {
      "style": [Function],
    },
    "py": {
      "style": [Function],
    },
    "right": {},
    "rowGap": {
      "style": [Function],
    },
    "textAlign": {},
    "textOverflow": {},
    "textTransform": {},
    "top": {},
    "typography": {
      "cssProperty": false,
      "themeKey": "typography",
    },
    "visibility": {},
    "whiteSpace": {},
    "width": {
      "transform": [Function],
    },
    "zIndex": {
      "themeKey": "zIndex",
    },
  },
  "zIndex": {
    "appBar": 1100,
    "drawer": 1200,
    "fab": 1050,
    "mobileStepper": 1000,
    "modal": 1300,
    "snackbar": 1400,
    "speedDial": 1050,
    "tooltip": 1500,
  },
}
`;

exports[`<ThemeProvider /> > should render correctly 1`] = `
<div>
  <div />
</div>
`;

exports[`<ThemeProvider /> > should use new theme 1`] = `
<div>
  <div
    class="sc-dlniIP eQwXbT"
  />
</div>
`;
